feat: start/stop symbol animation at end of polyline to avoid infinite animation

--- a/samples/overlay-symbol-animate/index.njk
+++ b/samples/overlay-symbol-animate/index.njk
@@ -5,5 +5,9 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 {% extends '../../src/_includes/layout.njk'%} {% block html %}
+<div id="floating-panel">
+     <button id="start">Start animation</button>
+    <button id="stop">Stop animation</button>
+</div>
 <div id="map"></div>
 {% endblock %}
